--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,3 +1,41 @@
-#demo {
+body {
+    background-image: url("../images/background@3x.png");
+    background-size: cover;
+}
+
+#title {
+    margin: 40% auto 20px;
+    width: 80%;
+}
+
+#title-img {
+    height: auto;
+    max-width: 100%;
+}
+
+#result {
+    margin-top: 15%;
     text-align: center;
+}
+
+#result-text {
+    font-size: 100%;
+    font-weight: bold;
+    color: #0f165c;
+}
+
+#result-img {
+    margin-left: 5%;
+    height: 1.5%;
+}
+
+#try {
+    margin: 5% auto;
+    width: 30%;
+    display: none;
+}
+
+#try-img {
+    height: auto;
+    max-width: 100%;
 }
